# python-vatcalc

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/vatcalc/: __init__.py  simple.py
tests/: test_simple.py
