[project]
name = "vatcalc"
version = "1.0.0"
description = "A simple VAT based price calculator"
readme = "README.md"
authors = [
    { name = "Sasha Matijasic", email = "sasha@selectnull.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
