[project]
name = "vatcalc"
version = "1.0.0"
description = "A simple VAT based price calculator"
readme = "README.md"
authors = [
    { name = "Sasha Matijasic", email = "sasha@selectnull.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License"
]
